# typid-client

./: .gitlab-ci.yml  .travis.yml  README.md  generate-code.sh  get_server_version.sh  pyproject.toml  renovate.json  requirements.txt  setup.py  test-requirements.txt  tox.ini
.github/workflows/: python.yml
.openapi-generator/: FILES
docs/: ActuatorApi.md  BatchRecordResponse.md  FindAll200Response.md  KnownPid.md  Link.md  PIDManagementApi.md  PIDRecord.md  PIDRecordEntry.md  SimplePair.md  SimplePidRecord.md  TabulatorPaginationFormat.md  TabulatorPaginationFormatKnownPid.md
openapi_client/: __init__.py  api_client.py  configuration.py  rest.py
openapi_client/api/: __init__.py  actuator_api.py  pid_management_api.py
openapi_client/highlevel/: __init__.py  record.py
openapi_client/models/: __init__.py  batch_record_response.py  find_all200_response.py  known_pid.py  link.py  pid_record.py  pid_record_entry.py  simple_pair.py  simple_pid_record.py  tabulator_pagination_format.py  tabulator_pagination_format_known_pid.py
pytypid/: __init__.py  record.py
pytypid_generated_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
test/: test_actuator_api.py  test_batch_record_response.py  test_find_all200_response.py  test_known_pid.py  test_link.py  test_pid_management_api.py  test_pid_record.py  test_pid_record_entry.py  test_simple_pair.py  test_simple_pid_record.py  test_tabulator_pagination_format.py  test_tabulator_pagination_format_known_pid.py
tests/: test_pid_management_api.py
typid_client/: __init__.py  record.py
(+19 files in other folders)
