[project]
name = "typid-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andreas Pfeil", email = "andreas.pfeil@kit.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.4",
]

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
